# falco

./: .gitignore  BUILD.bazel  WORKSPACE  go.mod  go.sum  readme.adoc
cli/: BUILD.bazel  example.go
grammar/: BUILD.bazel
jenkinsfile/: BUILD.bazel  main.go  parsing_test.go
jenkinsfile/grammar/: Jenkins.g4  jenkins.g4
