load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")

go_library(
    name = "go_default_library",
    srcs = [
        "example.go",
    ],
    deps = [
        "//grammar:go_default_library",
        "@com_github_antlr_antlr4//runtime/Go/antlr:go_default_library",
    ],
    importpath = "github.com/grahambrooks/falco",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)

go_binary(
    name = "falco",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
