load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@rules_antlr//antlr:antlr4.bzl", antlr4 = "antlr")

antlr4(
    name = "calc",
    srcs = ["Calc.g4"],
    language = "Go",
    package = "calc",
)

go_library(
    name = "go_default_library",
    srcs = [":calc" ],
    deps = [
        "@com_github_antlr_antlr4//runtime/Go/antlr:go_default_library",
    ],
    importpath = "github.com/grahambrooks/falco/calc",
    visibility = ["//visibility:public"],
)
