load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@rules_antlr//antlr:antlr4.bzl", antlr4 = "antlr")

antlr4(
    name = "jenkins",
    srcs = ["grammar/jenkins.g4"],
    language = "Go",
    package = "main",
)

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        ":jenkins",
    ],
    deps = [
        "//grammar:go_default_library",
        "@com_github_antlr_antlr4//runtime/Go/antlr:go_default_library",
    ],
    importpath = "github.com/grahambrooks/falco",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)

go_binary(
    name = "jenkinsfile",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
